--- a/package.json
+++ b/package.json
@@ -1,34 +1,45 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.4.4",
-        "@babel/preset-react": "^7.0.0",
-        "axios": "^0.19",
-        "browser-sync": "^2.26.7",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.15",
-        "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
-    },
-    "dependencies": {
-        "bulma": "^0.7.5",
-        "react-router-dom": "^5.1.2",
-        "styled-components": "^4.4.0"
-    }
+	"private": true,
+	"scripts": {
+		"dev": "npm run development",
+		"development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"watch": "npm run development -- --watch",
+		"watch-poll": "npm run watch -- --watch-poll",
+		"hmr": "cross-env NODE_ENV=development webpack-dev-server --config=webpack.mix.js --inline --hot --watch",
+		"hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"prod": "npm run production",
+		"production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/preset-react": "^7.0.0",
+		"axios": "^0.19",
+		"browser-sync": "^2.26.7",
+		"browser-sync-webpack-plugin": "^2.0.1",
+		"cross-env": "^5.1",
+		"jquery": "^3.2",
+		"laravel-mix": "^4.0.7",
+		"lodash": "^4.17.15",
+		"popper.js": "^1.12",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
+		"react-hot-loader": "^4.12.15",
+		"resolve-url-loader": "^2.3.1",
+		"sass": "^1.15.2",
+		"sass-loader": "^7.1.0",
+		"webpack": "^4.41.2",
+		"webpack-dev-server": "^3.8.2",
+		"write-file-webpack-plugin": "^4.5.1"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.6.3",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^8.0.6",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-env": "^1.7.0",
+		"bulma": "^0.7.5",
+		"html-webpack-plugin": "^3.2.0",
+		"react-router-dom": "^5.1.2",
+		"styled-components": "^4.4.0"
+	}
 }
