--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
 		"jquery": "^3.2",
 		"laravel-mix": "^4.0.7",
 		"lodash": "^4.17.15",
+		"node-sass": "^4.12.0",
 		"popper.js": "^1.12",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-hot-loader": "^4.12.15",
 		"resolve-url-loader": "^2.3.1",
 		"sass": "^1.15.2",
-		"sass-loader": "^7.1.0",
+		"sass-loader": "^7.3.1",
 		"webpack": "^4.41.2",
 		"webpack-dev-server": "^3.8.2",
 		"write-file-webpack-plugin": "^4.5.1"
