--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"babel-preset-env": "^1.7.0",
 		"bulma": "^0.7.5",
 		"html-webpack-plugin": "^3.2.0",
+		"react-redux": "^7.1.1",
 		"react-router-dom": "^5.1.2",
 		"styled-components": "^4.4.0"
 	}
