--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"html-webpack-plugin": "^3.2.0",
 		"react-redux": "^7.1.1",
 		"react-router-dom": "^5.1.2",
+		"redux": "^4.0.4",
 		"styled-components": "^4.4.0"
 	}
 }
